--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Spotify Web API CRUD with a Microsoft Zune UI inspiration.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
+    "express": "^4.17.2",
     "express-session": "^1.17.2",
     "hbs": "^4.2.0",
     "mongoose": "^6.2.1",
