--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "tail": "npx tailwindcss -i ./views/input.css -o ./public/css/output.css --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/jack-mad/Zunefy#readme",
   "dependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.0",
@@ -27,5 +29,8 @@
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
     "spotify-web-api-node": "^5.0.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.22"
   }
 }
